2007-09-09  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_toolbar):
	Improvements in toolbar's shadings

2007-09-09  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_list_view_header),
	(clearlooks_gummy_draw_toolbar):
	Organized code and tweaks in toolbar shadings

2007-09-09  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_button):
	Reverted old thickness behaviour

2007-09-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_scrollbar_slider):
	0.86 --> 0.85

2007-09-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_scrollbar_slider):
	0.85 --> 0.86

2007-09-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_scrollbar_slider):
	Second fix on scrollbar_color adjust, for 2.20! :)
	Fixes a lot of light colorschemes

2007-09-01  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_menubar2):
	Shadings
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_button):
	offset when >=2 and not == 3. Correct benzea?

2007-08-29  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	* engines/crux/Makefile.am:
	* engines/crux/src/crux-gradient.c:
	* engines/crux/src/crux-gradient.h:
	* engines/crux/src/eazel-theme.h:
	Removed some unused files from crux.

2007-08-24  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	So undecided about this :)

2007-08-23  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.11.7 release.

2007-08-21  Andrea Cimitan  <andrea.cimitan@gmail.com>
