@@ -1,6 +1,14 @@
 2007-09-09  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_draw_gummy.c:
+	(clearlooks_gummy_draw_list_view_header):
+	Removed alpha and used ge_cairo_set_color for coloring.
+	Fixes last shadings.
+	Clearlooks 2.20 reaches perfection! :)
+
+2007-09-09  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw_gummy.c:
 	(clearlooks_gummy_draw_toolbar):
 	Improvements in toolbar's shadings
 
